--- a/templates/page.html
+++ b/templates/page.html
@@ -1,16 +1,42 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <title>{{title}}</title>
-    {{& theme.head}}
+    <link rel="stylesheet" lang="text/css" href="{{site_root}}/bulma.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>a[href^="https://"]::after {
+        content: " [*]";
+      }
+      .navbar-menu {
+        box-shadow: none;
+      }</style>
   </head>
   <body>
-    <div class="section">
-      <h1 class="title">{{title}}</h1>
-      <div class="content">
-        {{& content}}
+    <section class="section">
+      <div class="container">
+        <nav class="navbar mb-4" role="navigation">
+          <div class="navbar-menu is-active">
+            <div class="navbar-start">
+              <a href="{{site_root}}/" class="navbar-item">Back home</a>
+            </div>
+            <div class="navbar-end">
+
+            </div>
+          </div>
+        </nav>
       </div>
-    </div>
-    {{& theme.body}}
+      <div class="container" id="content">
+        <h1 class="title">
+          <span class="icon-text">{{& lucide.apple}}
+            <span>{{title}}</span></span>
+        </h1>
+        {{& meta }}
+        
+        <p class="subtitle" style="font-size:95%;" >{{ description }}</p>
+        <section class="content" style="font-size:75%;" >
+          {{& content}}
+        </section>
+      </div>
+    </section>
   </body>
 </html>
